--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Computers</title>
 </head>
 <body>
-  <h1>ICS2O7 2018 Hardware Project</h1>
+  <h1 style="text-align:center">ICS2O7 2018 Hardware Project</h1>
 </body>
 </html>
