--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width;initial-scale=1.0">
   <title>Computers</title>
 </head>
-<body>
+<body style="text-color:green;color:black;font-family:monospace">
   <h1 style="text-align:center">ICS2O7 2018 Hardware Project</h1>
+  <hr>
 </body>
 </html>
