--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body style="text-color:green;color:black;font-family:monospace">
   <h1 style="text-align:center">ICS2O7 2018 Hardware Project</h1>
+  <h2 style="text-align:center">By: Maran S, Ken C, Joy Z, Noor A, & Tahmid C</h2>
   <hr>
+  <
 </body>
 </html>
