--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1 style="text-align:center">ICS2O7 2018 Hardware Project</h1>
   <h2 style="text-align:center">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <p>Welcome to our group's HTML website for the Hardware Project</p>
+  <p style="text-align:center">
+    Welcome to our group's HTML website for the Hardware Project.
+  </p>
 </body>
 </html>
