--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -13,5 +14,7 @@
   <p style="text-align:center">
     Welcome to our group's HTML website for the Hardware Project.
   </p>
+  <p>
+    In this project, we will be exploring the computer system, specifically the hardware pieces. 
 </body>
 </html>
