--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     Welcome to our group's HTML website for the Hardware Project.
   </p>
   <p>
-    In this project, we will be exploring the computer system, specifically the hardware pieces. 
+    In this project, we will be exploring the computer system, specifically the pieces of hardware that make it up. Here are the main things that will be coverd:
   </p>
+  <ul>
+    <li>CPU</li>
+    <li>Motherboard</li>
+    <li>Power supply</li>
+  </ul>
 </body>
 </html>
