--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width;initial-scale=1.0">
   <title>Computers</title>
 </head>
-<body style="text-color:green;color:black;font-family:monospace">
-  <h1 style="text-align:center">ICS2O7 2018 Hardware Project</h1>
+<body>
+  <h1>ICS2O7 2018 Hardware Project</h1>
   <h2 style="text-align:center">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
   <p style="text-align:center">
