--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width;initial-scale=1.0">
   <title>Computers</title>
 </head>
 <body>
   <h1>ICS2O7 2018 Hardware Project</h1>
-  <h2 style="text-align:center">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
+  <h2>By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <p style="text-align:center">
+  <p class= "intro">
     Welcome to our group's HTML website for the Hardware Project.
   </p>
   <p>
