--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <h1>ICS2O7 2018 Hardware Project</h1>
   <h2>By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <p class= "intro">
+  <h6 class= "intro">
     Welcome to our group's HTML website for the Hardware Project.
-  </p>
+  </h6>
   <p>
-    In this project, we will be exploring the computer system, specifically the pieces of hardware that make it up. Here are the main things that will be coverd:
+    In this project, we will be exploring the computer system, specifically 
+    the pieces of hardware that make it up. Here are the main things that 
+    will be covered:
   </p>
   <ul>
     <li>CPU</li>
