--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     will be covered:
   </p>
   <ul>
-    <li>CPU</li>
-    <li>Motherboard</li>
-    <li>Power supply</li>
+    <li>Central Processing Unit (CPU / Processor)</li>
+    <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
+    <li>Power Supply Unit (PSU)</li>
+    <li>Floppy Disk Drive (FDD)</li>
+    <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+    <li>Random Access Memory (RAM)</li>
   </ul>
 </body>
 </html>
