--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   <h1 class="hs1">ICS2O7 2018 Hardware Project</h1>
   <h2 class="hs2">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <h6 class="intro">
+  <h3 class="intro">
     Welcome to our group's HTML website for the Hardware Project.
-  </h6>
+  </h3>
   <p>
-    In this project, we will be exploring the computer system, specifically 
-    the pieces of hardware that make it up. Here are the main things that 
-    will be covered:
+    In this project, we will be exploring the computer system, specifically the pieces of hardware that make it up. Here are the main things that will be covered:
   </p>
   <ul>
     <li>Central Processing Unit (CPU / Processor)</li>
