--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Computers</title>
 </head>
 <body>
-  <h1 class="hs1">ICS2O7 2018 Hardware Project</h1>
-  <h2 class="hs2">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
+  <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
+  <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
   <h3 class="intro">Welcome to our group's HTML website for the Hardware Project.</h3>
   <p>
