--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   <h3 class="intro">Welcome to our group's HTML website for the Hardware Project.</h3>
   <p>
     In this project, we will be exploring the computer system, specifically the pieces of hardware that make it up. Here are the main things that will be covered:
+    <ul>
+      <li>Central Processing Unit (CPU / Processor)</li>
+      <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
+      <li>Power Supply Unit (PSU)</li>
+      <li>Floppy Disk Drive (FDD)</li>
+      <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+      <li>Random Access Memory (RAM / Memory)</li>
+      <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
+    </ul>
   </p>
-  <ul>
-    <li>Central Processing Unit (CPU / Processor)</li>
-    <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
-    <li>Power Supply Unit (PSU)</li>
-    <li>Floppy Disk Drive (FDD)</li>
-    <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
-    <li>Random Access Memory (RAM)</li>
-  </ul>
+  <p>
+    Let's get started on how the Computer looked before we deconstructed it...
+    <img href="" alt="Before PC Deconstruction">
+  </p>
 </body>
 </html>
