--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </p>
   <p>
-    Let's get started on how the Computer looked before we deconstructed it...
+    Let's get started on how the Computer looked before we deconstructed it...<br>
     <img href="" alt="Before PC Deconstruction">
   </p>
 </body>
