--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
     Let's get started on how the Computer looked before we deconstructed it...<br>
     <img href="" alt="Before PC Deconstruction">
   </p>
+  <h3 class= "intro">Central Processing Unit (CPU / Processor)</h3>
+  <p>The CPU is a miniaturized electronic component that can be referred to as the brain of the PC. It is responsible for two things:
+Carries out commands to make the hardware components perform actions. 
+Processes data; controls the execution of a computer and which performs basic arithmetic and logical operations. 
+Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. This is what makes the PC such a powerful tool.
+
 </body>
 </html>
