--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
   <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <h3 class="intro">Welcome to our group's HTML website for the Hardware Project.</h3>
+  <h3 class="intro">Welcome to our group's HTML website for the Hardware Project/h3>
   <p>
-    In this project, we will be exploring the computer system, specifically the pieces of hardware that make it up. Here are the main things that will be covered:
+    In this project, we will be exploring the computer system, specifically the pieces of hardware 
+    that make it up. Here are the main things that will be covered:
     <ul>
       <li>Central Processing Unit (CPU / Processor)</li>
       <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
@@ -23,15 +24,34 @@
       <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
     </ul>
   </p>
+  <br>
   <p>
-    Let's get started on how the Computer looked before we deconstructed it...<br>
+    Let's get started on how the Computer looked before we deconstructed it...
+    <br>
     <img href="" alt="Before PC Deconstruction">
+    <br>
+    As you can see, opening the computer case was all we had done prior to this picture being taken.
   </p>
-  <h3 class= "intro">Central Processing Unit (CPU / Processor)</h3>
-  <p>The CPU is a miniaturized electronic component that can be referred to as the brain of the PC. It is responsible for two things:
-Carries out commands to make the hardware components perform actions. 
-Processes data; controls the execution of a computer and which performs basic arithmetic and logical operations. 
-Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. This is what makes the PC such a powerful tool.
-
+  <br>
+  <h3>Central Processing Unit</h3>
+  <p>
+    The CPU was one of the first parts our group had managed to pull out of the computer, and is 
+    commonly referred to as the "brains" of a computer. The CPU is also known as the processor. The 
+    CPU is responsible for executing a program.
+    <br>
+    It is responsible for two things:
+     - Carrying out commands to make the hardware components perform actions. 
+     - Processing data; controls the execution of a computer and which performs basic arithmetic and 
+       logical operations. 
+    <br>
+    Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
+    millions of instructions every second. This is what makes the PC such a powerful tool.
+    <br>
+    <img href="" alt="Central Processing Unit">
+    <br>
+    Our computer was using an Intel® Pentium® 4 processor
+  </p>
+  <br>
+  <h3>Motherboard</h3>
 </body>
 </html>
