--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
   <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
-  <h3 class="intro">Welcome to our group's HTML website for the Hardware Project/h3>
+  <h3 class="intro">Welcome to our group's HTML website for the Hardware Project</h3>
   <p>
     In this project, we will be exploring the computer system, specifically the pieces of hardware 
     that make it up. Here are the main things that will be covered:
@@ -53,5 +53,6 @@
   </p>
   <br>
   <h3>Motherboard</h3>
+  <p>
 </body>
 </html>
