--- a/index.html
+++ b/index.html
@@ -49,10 +49,18 @@
     <br>
     <img href="" alt="Central Processing Unit">
     <br>
-    Our computer was using an Intel® Pentium® 4 processor
+    Our computer was using an Intel® Pentium® 4 processor.
   </p>
   <br>
   <h3>Motherboard</h3>
   <p>
+    Although we had managed to take out the CPU quickly, the motherboard took quite a while to detach, 
+    it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
+    allows communication to the CPU, RAM, and all other computer hardware components. 
+    <br>
+    <img href="" alt="Motherboard">
+    <br>
+    Our motherboard was located at the bottom of our computer case. 
+  </p>
 </body>
 </html>
