--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>
     Let's get started on how the Computer looked before we deconstructed it...
     <br>
-    <img href="" alt="Before PC Deconstruction">
+    <img href="" alt="beforeconstruction.jpg">
     <br>
     As you can see, opening the computer case was all we had done prior to this picture being taken.
   </p>
