--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>
     Let's get started on how the Computer looked before we deconstructed it...
     <br>
-    <img href="beforeconstruction.jpg" alt="Before PC Deconstruction">
+    <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
     <br>
     As you can see, opening the computer case was all we had done prior to this picture being taken.
   </p>
@@ -47,7 +47,7 @@
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
     millions of instructions every second. This is what makes the PC such a powerful tool.
     <br>
-    <img href="floppydiskandCPU.jpg" alt="Central Processing Unit">
+    <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
     <br>
     Our computer was using an Intel® Pentium® 4 processor (top-left).
   </p>
@@ -58,7 +58,7 @@
     it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
     allows communication to the CPU, RAM, and all other computer hardware components. 
     <br>
-    <img href="motherboard2.jpg" alt="Motherboard">
+    <img src="motherboard2.jpg" alt="Motherboard">
     <br>
     Our motherboard was located at the bottom of our computer case. 
   </p>
