--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   <p>
     Let's get started on how the Computer looked before we deconstructed it...
     <br>
-    <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
-    <br>
-    As you can see, opening the computer case was all we had done prior to this picture being taken.
+    <figure>
+      <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
+      <figcaption>As you can see, opening the computer case was all we had done prior to this picture being taken.</figcaption>
+    </figure>
   </p>
   <br>
   <h3>Central Processing Unit</h3>
@@ -48,9 +49,10 @@
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
     millions of instructions every second. This is what makes the PC such a powerful tool.
     <br>
-    <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
-    <br>
-    Our computer was using an Intel® Pentium® 4 processor (top-left).
+    <figure>
+      <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
+      <figcaption>Our computer was using an Intel® Pentium® 4 processor (top-left).</figcaption>
+    </figure>
   </p>
   <br>
   <h3>Motherboard</h3>
@@ -59,9 +61,10 @@
     it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
     allows communication to the CPU, RAM, and all other computer hardware components. 
     <br>
-    <img src="motherboard2.jpg" alt="Motherboard">
-    <br>
-    Our motherboard was located at the bottom of our computer case. 
+    <figure>
+      <img src="motherboard2.jpg" alt="Motherboard">
+      <figcaption>Our motherboard was located at the bottom of our computer case.</figcaption>
+    </figure>
   </p>
 </body>
 </html>
