--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <br>
     <figure>
       <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
-      <figcaption>As you can see, opening the computer case was all we had done prior to this picture being taken.</figcaption>
+      <figcaption>As you can see, opening the computer case was all we had done prior to this picture 
+        being taken.</figcaption>
     </figure>
   </p>
   <br>
@@ -51,7 +52,8 @@
     <br>
     <figure>
       <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
-      <figcaption>Our computer was using an Intel® Pentium® 4 processor (top-left).</figcaption>
+      <figcaption>Our computer was using an Intel® Pentium® 4 processor(top-left), seen here beside 
+        the Floppy Disk Drive (right).</figcaption>
     </figure>
   </p>
   <br>
