--- a/index.html
+++ b/index.html
@@ -25,40 +25,55 @@
       <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
     </ul>
   </p>
+  <br>
   <p>
     Let's get started on how the Computer looked before we deconstructed it...
+    <br>
     <figure>
       <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
       <figcaption>As you can see, opening the computer case was all we had done prior to this picture 
         being taken.</figcaption>
     </figure>
   </p>
+  <br>
   <h3>Central Processing Unit</h3>
   <p>
-    The CPU was one of the first parts our group had managed to pull out of the computer, and is 
+    The CPU was one of the first parts our group had managed to pull out of the computer, it is 
     commonly referred to as the "brains" of a computer. The CPU is also known as the processor. The 
     CPU is responsible for executing a program.
+    <br>
     It is responsible for two things:
      - Carrying out commands to make the hardware components perform actions. 
      - Processing data; controls the execution of a computer and which performs basic arithmetic and 
        logical operations. 
+    <br>
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
     millions of instructions every second. This is what makes the PC such a powerful tool.
+    <br>
     <figure>
       <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
       <figcaption>Our computer was using an Intel® Pentium® 4 processor(top-left), seen here beside 
         the Floppy Disk Drive (right).</figcaption>
     </figure>
   </p>
+  <br>
   <h3>Motherboard</h3>
   <p>
     Although we had managed to take out the CPU quickly, the motherboard took quite a while to detach, 
     it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
     allows communication to the CPU, RAM, and all other computer hardware components. 
+    <br>
     <figure>
       <img src="motherboard2.jpg" alt="Motherboard">
       <figcaption>Our motherboard was located at the bottom of our computer case.</figcaption>
     </figure>
   </p>
+  <h3>Power Supply Unit</h3>
+  <p>
+    The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
+    internal components of a computer. Modern PCs universally use power supplies with switches. Some power 
+    supplies have a manual switch for selecting the input and output voltage, while others automatically 
+    adapt to the source.
+    <br>
 </body>
 </html>
