--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <figcaption>Our motherboard was located at the bottom of our computer case.</figcaption>
     </figure>
   </p>
+  <br>
   <h3>Power Supply Unit</h3>
   <p>
     The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
@@ -75,5 +76,11 @@
     supplies have a manual switch for selecting the input and output voltage, while others automatically 
     adapt to the source.
     <br>
+    <figure>
+      <img src="powersupply.jpg" alt="Power Supply Unit">
+      <figcaption>Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover,
+        so it took quite some time to take it out.</figcaption>
+    </figure>
+  </p>
 </body>
 </html>
