--- a/index.html
+++ b/index.html
@@ -78,8 +78,21 @@
     <br>
     <figure>
       <img src="powersupply.jpg" alt="Power Supply Unit">
-      <figcaption>Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover,
-        so it took quite some time to take it out.</figcaption>
+      <figcaption>Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective 
+        cover, so it took quite some time to take it out.</figcaption>
+    </figure>
+  </p>
+  <br>
+  <h3>Floppy Disk Drive</h3>
+  <p>
+    The FDD was one of the first parts our groups had managed to pull out of the computer, it is a magnetic 
+    storage drive for computers. The floppy disk is composed of a thin, flexible magnetic disk sealed in a 
+    square plastic carrier (it looks like the save icon on most word-processing applications). In order to 
+    read and write data from a floppy disk, a computer system must have a floppy disk drive.
+    <br>
+    <figure>
+      <img src="" alt="Floppy Disk Drive">
+      <figcaption>Our computer's Floppy Disk Drive was located right beside the Optical Disk Drive.</figcaption>
     </figure>
   </p>
 </body>
