--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     read and write data from a floppy disk, a computer system must have a floppy disk drive.
     <br>
     <figure>
-      <img src="" alt="Floppy Disk Drive">
+      <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
       <figcaption>Our computer's Floppy Disk Drive was located right beside the Optical Disk Drive.</figcaption>
     </figure>
   </p>
