--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <br>
     <figure>
       <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
-      <figcaption>Our computer's Floppy Disk Drive was located right beside the Optical Disk Drive.</figcaption>
+      <figcaption>Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).</figcaption>
     </figure>
   </p>
 </body>
