--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <br>
     <figure>
       <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
-      <figcaption>Our computer was using an Intel® Pentium® 4 processor(top-left), seen here beside 
+      <figcaption>Our computer was using an Intel® Pentium® 4 processor (top-left), seen here beside 
         the Floppy Disk Drive (right).</figcaption>
     </figure>
   </p>
@@ -95,5 +95,7 @@
       <figcaption>Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).</figcaption>
     </figure>
   </p>
+  <br>
+  <h3>Optical Disk Drive</h3>
 </body>
 </html>
