--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
       <li>Power Supply Unit (PSU)</li>
       <li>Floppy Disk Drive (FDD)</li>
       <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+      <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
       <li>Random Access Memory (RAM / Memory)</li>
       <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
+      <li>Expansion Card</li>
+      <li>Riser Card</li>
+      <li>Riser Cable</li>
+      <li>Cooling Fans</li>
     </ul>
   </p>
   <br>
