--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     that make it up. Here are the main things that will be covered:
     <ul>
       <li>Central Processing Unit (CPU / Processor)</li>
+      <li>CPU Cooling Fans</li>
       <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
-      <li>Power Supply Unit (PSU)</li>
-      <li>Floppy Disk Drive (FDD)</li>
-      <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
-      <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
-      <li>Random Access Memory (RAM / Memory)</li>
-      <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
       <li>Expansion Card</li>
       <li>Riser Card</li>
       <li>Riser Cable</li>
-      <li>Cooling Fans</li>
+      <li>Random Access Memory (RAM / Memory)</li>
+      <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
+      <li>Power Supply Unit (PSU)</li>
+      <li>Floppy Disk Drive (FDD)</li>
+      <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+      <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
     </ul>
   </p>
   <br>
