--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
     </figure>
   </p>
   <br>
+  <h3>CPU Cooling Fan</h3>
+  <p>
+    We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes 
+    the waste heat produced by the CPU, to keep it within permissible operating temperature limits.
+    <br>
+    <figure>
+      <img src="fan2.jpg" alt="CPU Cooling Fan">
+      <figcaption>The cooling fan (right) and heatsink (left) were mounted on top of the CPU.</figcaption>
+    </figure>
+  </p>
+  <br>
   <h3>Motherboard</h3>
   <p>
     Although we had managed to take out the CPU quickly, the motherboard took quite a while to detach, 
@@ -71,6 +82,18 @@
     <figure>
       <img src="motherboard2.jpg" alt="Motherboard">
       <figcaption>Our motherboard was located at the bottom of our computer case.</figcaption>
+    </figure>
+  </p>
+  <br>
+  <h3>Expansion Card</h3>
+  <p>
+    We managed to detach the expansion card immediately after pulling out the motherboard, it is a printed 
+    circuit board that can be inserted into an electrical connector, or expansion slot, on a computer 
+    motherboard, backplane or riser card to add functionality to a computer system.
+    <br>
+    <figure>
+      <img src="PCIexpansionCard1.jpg" alt="Expansion Card">
+      <figcaption>Our expansion card was connected to the motherboard, located by the PSU.</figcaption>
     </figure>
   </p>
   <br>
@@ -97,7 +120,8 @@
     <br>
     <figure>
       <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
-      <figcaption>Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).</figcaption>
+      <figcaption>Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive 
+        (left).</figcaption>
     </figure>
   </p>
   <br>
