--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <li>Central Processing Unit (CPU / Processor)</li>
       <li>CPU Cooling Fans</li>
       <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
-      <li>Expansion Card</li>
       <li>Riser Card</li>
       <li>Riser Cable</li>
       <li>Random Access Memory (RAM / Memory)</li>
@@ -85,15 +84,16 @@
     </figure>
   </p>
   <br>
-  <h3>Expansion Card</h3>
+  <h3>Riser Card</h3>
   <p>
-    We managed to detach the expansion card immediately after pulling out the motherboard, it is a printed 
-    circuit board that can be inserted into an electrical connector, or expansion slot, on a computer 
-    motherboard, backplane or riser card to add functionality to a computer system.
+    We managed to detach the riser card immediately after pulling out the motherboard, it is a board that 
+    plugs into the motherboard and provides additional expansion slots. Because it rises above 
+    the motherboard, it enables you to connect additional adapters to the system in an orientation that 
+    is parallel to the system board and save space within the computer case.
     <br>
     <figure>
-      <img src="PCIexpansionCard1.jpg" alt="Expansion Card">
-      <figcaption>Our expansion card was connected to the motherboard, located by the PSU.</figcaption>
+      <img src="PCIRiserCard1.jpg" alt="Riser Card">
+      <figcaption>Our riser card was connected to the motherboard, located by the PSU.</figcaption>
     </figure>
   </p>
   <br>
