--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     is parallel to the system board and save space within the computer case.
     <br>
     <figure>
-      <img src="PCIRiserCard1.jpg" alt="Riser Card">
+      <img src="PCIRiserCard.jpg" alt="Riser Card">
       <figcaption>Our riser card was connected to the motherboard, located by the PSU.</figcaption>
     </figure>
   </p>
