--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         the Floppy Disk Drive (right).</figcaption>
     </figure>
   </p>
+  <p>
+    The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: It creates orders to influence the equipment segments to perform activities. 
+    Processes information; controls the execution of a PC and which performs fundamental math and sensible operations. Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of guidelines consistently. This is the thing that makes the PC such an intense device. 
+  </p>
   <br>
   <h3>CPU Cooling Fan</h3>
   <p>
