--- a/index.html
+++ b/index.html
@@ -29,104 +29,96 @@
     <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
     <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
   </ul>
-  <br>
   <p>
     Let's get started on how the Computer looked before we deconstructed it...
   </p>
-    <br>
-      <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
-      <figcaption>As you can see, opening the computer case was all we had done prior to this picture 
-        being taken.</figcaption>
-  <br>
+  <figure>
+    <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
+    <figcaption>
+      As you can see, opening the computer case was all we had done prior to this picture being taken.
+    </figcaption>
+  </figure>
   <h3>Central Processing Unit</h3>
   <p>
     The CPU was one of the first parts our group had managed to pull out of the computer, it is 
     commonly referred to as the "brains" of a computer. The CPU is also known as the processor. The 
     CPU is responsible for executing a program.
-    <br>
     It is responsible for two things:
      - Carrying out commands to make the hardware components perform actions. 
      - Processing data; controls the execution of a computer and which performs basic arithmetic and 
        logical operations. 
-    <br>
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
     millions of instructions every second. This is what makes the PC such a powerful tool.
-    <br>
-    <figure>
-      <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
-      <figcaption>Our computer was using an Intel® Pentium® 4 processor (top-left), seen here beside 
-        the Floppy Disk Drive (right).</figcaption>
-    </figure>
-  </p>
+    </p>
+  <figure>
+    <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
+    <figcaption>
+      Our computer was using an Intel® Pentium® 4 processor (top-left), seen here beside the Floppy Disk Drive (right).
+    </figcaption>
+  </figure>
   <p>
     The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: It creates orders to influence the equipment segments to perform activities. 
     Processes information; controls the execution of a PC and which performs fundamental math and sensible operations. Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of guidelines consistently. This is the thing that makes the PC such an intense device. 
   </p>
-  <br>
   <h3>CPU Cooling Fan</h3>
   <p>
-    We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes 
-    the waste heat produced by the CPU, to keep it within permissible operating temperature limits.
-    <br>
-    <figure>
-      <img src="fan2.jpg" alt="CPU Cooling Fan">
-      <figcaption>The cooling fan (right) and heatsink (left) were mounted on top of the CPU.</figcaption>
-    </figure>
+    We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes the waste heat produced by the CPU, to keep it within permissible operating temperature limits.
   </p>
-  <br>
+  <figure>
+    <img src="fan2.jpg" alt="CPU Cooling Fan">
+    <figcaption>
+      The cooling fan (right) and heatsink (left) were mounted on top of the CPU.
+    </figcaption>
+  </figure>
   <h3>Motherboard</h3>
   <p>
     Although we had managed to take out the CPU quickly, the motherboard took quite a while to detach, 
     it is a printed circuit board that is known as the foundation of a computer. It allocates power and 
     allows communication to the CPU, RAM, and all other computer hardware components. 
-    <br>
-    <figure>
-      <img src="motherboard2.jpg" alt="Motherboard">
-      <figcaption>Our motherboard was located at the bottom of our computer case.</figcaption>
-    </figure>
   </p>
-  <br>
+  <figure>
+    <img src="motherboard2.jpg" alt="Motherboard">
+    <figcaption>
+      Our motherboard was located at the bottom of our computer case.
+    </figcaption>
+  </figure>
   <h3>Riser Card</h3>
   <p>
     We managed to detach the riser card immediately after pulling out the motherboard, it is a board that 
     plugs into the motherboard and provides additional expansion slots. Because it rises above 
     the motherboard, it enables you to connect additional adapters to the system in an orientation that 
     is parallel to the system board and save space within the computer case.
-    <br>
+  </p>
     <figure>
       <img src="PCIRiserCard.jpg" alt="Riser Card">
       <figcaption>Our riser card was connected to the motherboard, located by the PSU.</figcaption>
     </figure>
-  </p>
-  <br>
   <h3>Power Supply Unit</h3>
   <p>
     The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
     internal components of a computer. Modern PCs universally use power supplies with switches. Some power 
     supplies have a manual switch for selecting the input and output voltage, while others automatically 
     adapt to the source.
-    <br>
-    <figure>
-      <img src="powersupply.jpg" alt="Power Supply Unit">
-      <figcaption>Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective 
-        cover, so it took quite some time to take it out.</figcaption>
-    </figure>
   </p>
-  <br>
+  <figure>
+    <img src="powersupply.jpg" alt="Power Supply Unit">
+    <figcaption>
+      Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover, so it took quite some time to take it out.
+    </figcaption>
+  </figure>
   <h3>Floppy Disk Drive</h3>
   <p>
     The FDD was one of the first parts our groups had managed to pull out of the computer, it is a magnetic 
     storage drive for computers. The floppy disk is composed of a thin, flexible magnetic disk sealed in a 
     square plastic carrier (it looks like the save icon on most word-processing applications). In order to 
     read and write data from a floppy disk, a computer system must have a floppy disk drive.
-    <br>
-    <figure>
-      <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
-      <figcaption>Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive 
-        (left).</figcaption>
-    </figure>
   </p>
-  <br>
+  <figure>
+    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
+    <figcaption>
+      Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).
+    </figcaption>
+  </figure>
   <h3>Optical Disk Drive</h3>
 </body>
 </html>
