--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        logical operations. 
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
     millions of instructions every second. This is what makes the PC such a powerful tool.
-    </p>
+  </p>
   <figure>
     <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
     <figcaption>
@@ -89,10 +89,12 @@
     the motherboard, it enables you to connect additional adapters to the system in an orientation that 
     is parallel to the system board and save space within the computer case.
   </p>
-    <figure>
-      <img src="PCIRiserCard.jpg" alt="Riser Card">
-      <figcaption>Our riser card was connected to the motherboard, located by the PSU.</figcaption>
-    </figure>
+  <figure>
+    <img src="PCIRiserCard.jpg" alt="Riser Card">
+    <figcaption>
+      Our riser card was connected to the motherboard, located by the PSU.
+    </figcaption>
+  </figure>
   <h3>Power Supply Unit</h3>
   <p>
     The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
