--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
   </p>
   <figure>
     <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
-    <figurecaption>
+    <figcaption>
       Here is our Optical Disk Drive.
-    </figurecaption>
+    </figcaption>
   </figure>
   <p>
     An optical drive in a PC framework enables you to utilize Cds, DVDs, and Blu-beam plates to tune in to music or watch a film. 
